sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value n
  n=getNombreValeurs()
  ^AlgBubbleSort1:4: error: not found: value n
  for(i<-1 to n-1) {
              ^AlgBubbleSort1:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^AlgBubbleSort1:6: warning: enclosing method testSort has result type Unit: return value discarded
      return false
      ^AlgBubbleSort1:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return true
         ^AlgBubbleSort1:8: warning: enclosing method testSort has result type Unit: return value discarded
  return true
  ^AlgBubbleSort1:15: error: not found: value n
  n=getNombreValeurs() 
  ^AlgBubbleSort1:17: error: not found: value n
    for(i<-1 to n-1) {
                ^